# goit-pythonweb-hw-01

./: README.md  pyproject.toml  task1.py  task2.py
