[tool.poetry]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = "Домашнє завдання для курсу Python web"
authors = ["ekatsiashvili <katsiashvili.elena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
